# typographeur

./: .gitignore  .travis.yml  Changelog.md  Makefile  README.md  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: extract_ligatures.py
assets/sources/: fr-moderne.dic  fr-reforme1990.dic  fr-toutesvariantes.dic
tests/: fixtures_factory.py  test_full.py  test_insecables.py  test_ligatures.py  test_markdown.py  test_no_space.py  test_nuples.py  test_oe.py  test_parameters.py  test_points.py  test_quotes.py  test_skip.py
tests/examples/: expected.html  expected.md  input.html  input.md
typographeur/: __init__.py  ligatures.py
