[metadata]
name = typographeur
description = Sacrebleu ! Nous voulons de vrais guillemets !
version = 0.0.0
author = Bruno Bord
author_email = bruno@jehaisleprintemps.net
url = https://jehaisleprintemps.net
long_description = file: README.md
long_description_content_type = text/markdown
keywords = text processing typography
license = MIT
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: French
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Filters

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
dev =

test =
    pytest
    flake8

[bdist_wheel]
universal = 1
