[metadata]
name = typographeur
description = Faire respecter les règles typographiques françaises en HTML.
version = 0.6.0.dev0
author = Bruno Bord
author_email = bruno@jehaisleprintemps.net
url = https://github.com/brunobord/typographeur/
long_description = file: README.md
long_description_content_type = text/markdown
keywords = text processing typography
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: French
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Markup :: HTML

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    typographeur = typographeur.__init__:main

[options.extras_require]
dev =

test =
    pytest
    pytest-cov
    flake8
